k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookly-app
  labels:
    name: bookly-app
