k8s/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: bookly-app
  labels:
    app: mongo
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
  selector:
    app: mongo
