k8s/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: bookly-app
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres
